bug: bottom of edit_projects is showing on small size

--- a/server/static/scss/projects.scss
+++ b/server/static/scss/projects.scss
@@ -17,7 +17,6 @@
 
 #project-wrapper {
 	background-color: white;
-	margin: 0px 0px 53px;
 	padding: 25px;
 	position: relative;
 	overflow: auto;
